# sensor_sync

./: CMakeLists.txt  README.md  package.xml
include/sensor_sync_optimizer/: point_types.hpp  sensor_sync_optimizer.hpp  stamp_residual.hpp
launch/: xx1_camera.xml  xx1_lidars.xml
src/: sensor_sync_optimizer.cpp
